--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,5 +1,5 @@
-AuthName "Restricted Area"
-AuthType Basic
-AuthUserFile /app/web/.htpasswd
-AuthGroupFile /dev/null
-require valid-user
+# AuthName "Restricted Area"
+# AuthType Basic
+# AuthUserFile /app/web/.htpasswd
+# AuthGroupFile /dev/null
+# require valid-user
